# rust-learning-notes

./: README.md
advanced_func_closures/: advanced.rs
advanced_types/: advanced_types.rs
async/basics/basics/: Cargo.toml
async/tokio/my-redis/: NOTES.md
async/tokio/my_redis/: Cargo.toml  NOTES.md
cargo_and_crate/: cargo_and_crate.md
cargo_and_crate/add/: Cargo.toml
cargo_and_crate/add/adder/: Cargo.toml
cargo_and_crate/add/adder/src/: adder.rs
cargo_and_crate/cargo_demo/: Cargo.toml
closures/: closures.rs
collections/: collections.rs
docs/: commands.md
docs_for_ref/: commands.md  glossary.md
enum/: enum.rs
error_handling/: error.rs
fearless_concurrency/: message_passing.rs  send_and_sync_traits.md  shared_state.rs  simple_threads.rs
generic_types/: generic_types.rs
hands_on_projects/minigrep/: NOTES.md  test_file.txt
lifetimes/: lifetimes.rs
misc/: use_option_to_move_ownership.rs
one_topic_at_a_time/: comparing_with_other_langs.md  const_and_static.md  derive_macro.md  fun_to_know.md  send_closure.rs  use_option_to_move_ownership.rs  visibility_modifiers.md
oop/: oop.rs
ownership/: borrowing.rs  ownership.rs  undefined_behaviour.rs
patterns_matching/: patterns_matching.rs
slice/: slice.rs
smart_pointers/: box.rs  smart_pointers.rs
stack_and_heap/: stack_and_heap.rs
string/: string  string.rs
struct/: associated_functions_vs_methods.rs  struct.rs
traits/: traits.rs
traits/advanced/: associated_types.rs  default_generic_types.rs  newtype_pattern.rs  supertraits.rs
traits/simple/: traits.rs
unsafe/: unsafe.rs
(+15 files in other folders)
